--- a/src/main/resources/templates/fragments/navigationbar.html
+++ b/src/main/resources/templates/fragments/navigationbar.html
@@ -35,13 +35,13 @@
 					<li class="nav-item"><a class="nav-link" th:href="@{/home}">Home</a></li>
 
 					<li class="nav-item"><a class="nav-link"
-						th:href="@{/admin/projects}">View Projects</a></li>
+						th:href="@{/admin/project/all}">View Projects</a></li>
 
 					<li class="nav-item"><a class="nav-link"
 						th:href="@{/admin/project/create}">Add Project</a></li>
 
 					<li class="nav-item"><a class="nav-link"
-						th:href="@{/admin/employees}">View Employees</a></li>
+						th:href="@{/admin/employee/all}">View Employees</a></li>
 
 					<li class="nav-item"><a class="nav-link"
 						th:href="@{/admin/employee/create}">Add Employee</a></li>
