--- a/src/main/resources/templates/home/adminHome.html
+++ b/src/main/resources/templates/home/adminHome.html
@@ -54,13 +54,13 @@
 							<ul class="nav flex-column">
 
 								<li class="nav-item"><a class="nav-link"
-									th:href="@{/admin/projects}">View Projects</a></li>
+									th:href="@{/admin/project/all}">View Projects</a></li>
 
 								<li class="nav-item"><a class="nav-link"
 									th:href="@{/admin/project/create}">Add Project</a></li>
 
 								<li class="nav-item"><a class="nav-link"
-									th:href="@{/admin/employees}">View Employees</a></li>
+									th:href="@{/admin/employee/all}">View Employees</a></li>
 
 								<li class="nav-item"><a class="nav-link"
 									th:href="@{/admin/employee/create}">Add Employee</a></li>
