--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,11 +32,14 @@
 			<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 				<div
 					class="container-fluid d-flex flex-column flex-md-row justify-content-between">
-					<a class="navbar-brand col-sm-3 col-md-2 mr-0"
-						data-toggle="collapse" href="#collapseOne">Hello, <span
-						th:text="${username}">User Name</span></a>
-						
-						<ul class="navbar-nav">
+
+					<img class="img-thumbnail img-responsive" alt="memorynotfound logo"
+						width="10%" th:src="@{/img/sgx_logo.png}"> <a
+						class="navbar-brand col-sm-3 col-md-2 mr-0" data-toggle="collapse"
+						href="#collapseOne">Hello, <span th:text="${username}">User
+							Name</span></a>
+
+					<ul class="navbar-nav">
 						<li class="nav-item text-nowrap"><a class="nav-link"
 							th:href="@{/home}">Home</a></li>
 					</ul>
@@ -44,6 +47,7 @@
 						<li class="nav-item text-nowrap"><a class="nav-link"
 							th:href="@{/logout}">Sign out</a></li>
 					</ul>
+
 				</div>
 			</nav>
 		</header>
