--- a/src/main/resources/templates/user/weekViewEdit.html
+++ b/src/main/resources/templates/user/weekViewEdit.html
@@ -32,7 +32,7 @@
 <body>
 	<div th:replace="fragments/header :: header">&nbsp;</div>
 
-	<div class="container">
+	<div class="container ">
 		<div class="row">
 			<div class="header">
 				<h3>Week view edit</h3>
@@ -52,7 +52,8 @@
 
 					<ul class="navbar-nav px-3">
 						<li class="nav-item text-nowrap"><a class="nav-link"
-							th:href="@{/weekview/edit}" th:text="${weekViewModel.currentWeek}">Current week</a></li>
+							th:href="@{/weekview/edit}"
+							th:text="${weekViewModel.currentWeek}">Current week</a></li>
 					</ul>
 
 					<ul class="navbar-nav px-3">
@@ -61,11 +62,11 @@
 					</ul>
 				</div>
 			</nav>
-		
+
 		</div>
 
 		<div class="row">
-			<div class="col-md-10 table-responsive">
+			<div class="col-md-10 col-sm-6 table-responsive">
 				<form action="#" th:action="@{/weekview/save}" th:object="${form}"
 					method="post">
 					<fieldset>
@@ -75,6 +76,7 @@
 							<thead class="thead-dark">
 								<tr>
 									<th><span>Project</span></th>
+									<th><span>Task</span></th>
 									<th><span
 										th:text="${weekViewModel.weekViewTableCols.mon.head}">Mon</span></th>
 									<th><span
@@ -91,6 +93,7 @@
 										th:text="${weekViewModel.weekViewTableCols.sun.head}">Sun</span></th>
 									<th><span>Total</span></th>
 									<th><span></span></th>
+									<th><span></span></th>
 								</tr>
 							</thead>
 
@@ -102,6 +105,7 @@
 									<td><span
 										th:text="${weekview.employeeProject.project.name}">
 											Project</span></td>
+									<td><span th:text="${weekview.task.name}"> Task</span></td>
 
 									<td><input class="col-lg"
 										th:placeholder="Mon + ' ' + ${itemStat.count}"
@@ -137,6 +141,9 @@
 									<td><input hidden="id"
 										th:name="|weekviews[${itemStat.index}].employeeProject.id|"
 										th:value="${weekview.employeeProject.id}" /></td>
+									<td><input hidden="id"
+										th:name="|weekviews[${itemStat.index}].task.id|"
+										th:value="${weekview.task.id}" /></td>
 
 								</tr>
 							</tbody>
@@ -144,6 +151,7 @@
 							<tfoot class="thead-light">
 								<tr>
 									<th><span>Total</span></th>
+									<th></th>
 									<th><span
 										th:text="${weekViewModel.weekViewTableCols.mon.foot}">Mon</span></th>
 									<th><span
@@ -160,6 +168,7 @@
 										th:text="${weekViewModel.weekViewTableCols.sun.foot}">Sun</span></th>
 									<th><span
 										th:text="${weekViewModel.weekViewTableCols.total.foot}">0</span></th>
+									<th><span></span></th>
 									<th><span></span></th>
 								</tr>
 							</tfoot>
