--- a/src/main/resources/templates/user/weekViewEdit.html
+++ b/src/main/resources/templates/user/weekViewEdit.html
@@ -175,8 +175,10 @@
 						</table>
 
 
-						<input type="submit" id="submitButton" th:value="Save"> <input
-							type="reset" id="resetButton" name="reset" th:value="Reset" />
+						<input type="submit" id="saveButton" name="action" th:value="Save"/>
+						<input type="reset" id="resetButton" name="action" th:value="Reset" /> 
+						<input type="submit" id="submitButton" name="action" th:value="SubmitForApproval" />
+						
 					</fieldset>
 				</form>
 			</div>
