--- a/src/main/resources/templates/fragments/navigationbar.html
+++ b/src/main/resources/templates/fragments/navigationbar.html
@@ -17,7 +17,7 @@
             <!-- Optionally, you can add icons to the links -->
       
             <li><a th:href="@{/home}"><i class="fa fa-home"></i> <span>Home</span></a></li>
-            <li><a th:href="@{/weekview/edit}"><i class="fa fa-book"></i> <span>My Timesheets</span></a></li>
+            <li><a th:href="@{/weekview/edit}"><i class="fa fa-link"></i> <span>My Timesheets</span></a></li>
             <li><a th:href="@{/admin/project/all}"><i class="fa fa-book"></i> <span>View Projects</span></a></li>
             <li><a th:href="@{/admin/project/create}"><i class="fa fa-pencil"></i> <span>Add Project</span></a></li>
             <li><a th:href="@{/admin/employee/all}"><i class="fa fa-book"></i> <span>View Employees</span></a></li>
