--- a/src/main/resources/templates/admin/employees.html
+++ b/src/main/resources/templates/admin/employees.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="/fragments/head :: head"/>
 
-<body>
+<body class="hold-transition skin-black-light sidebar-mini">
+
 <div class="wrapper">
 
     <div th:replace="/fragments/header :: header">&nbsp;</div>
