--- a/src/main/resources/templates/user/weekViewEdit.html
+++ b/src/main/resources/templates/user/weekViewEdit.html
@@ -17,23 +17,24 @@
         <section class="content container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="box">
-                        <div class="box-header with-border">
-                            <h3 class="box-title">This Week</h3>
-                            <ul class="pagination pagination-sm no-margin pull-right">
-                                <li><a th:href="@{/weekview/edit(action=previous)}">&#8249;&#8249;</a></li>
-                                <li><a th:href="@{/weekview/edit}"
-                                       th:text="${weekViewModel.currentWeek}">Current week</a></li>
-                                <li><a th:href="@{/weekview/edit(action=next)}">&#8250;&#8250;</a></li>
-                            </ul>
+                    <form action="#" th:action="@{/weekview/save}" th:object="${form}"
+                          method="post">
+                        <fieldset>
+                            <div class="box">
+                                <div class="box-header with-border">
+                                    <h3 class="box-title">This Week</h3>
+                                    <ul class="pagination pagination-sm no-margin pull-right">
+                                        <li><a th:href="@{/weekview/edit(action=previous)}">&#8249;&#8249;</a></li>
+                                        <li><a th:href="@{/weekview/edit}"
+                                               th:text="${weekViewModel.currentWeek}">Current week</a></li>
+                                        <li><a th:href="@{/weekview/edit(action=next)}">&#8250;&#8250;</a></li>
+                                    </ul>
 
-                        </div>
-                        <form action="#" th:action="@{/weekview/save}" th:object="${form}"
-                              method="post">
-                            <fieldset>
+                                </div>
                                 <!-- /.box-header -->
+
                                 <div class="box-body table-mobile">
-                                    <table id="TimeSheetWeekView"
+                                        <table id="TimeSheetWeekView"
                                            class="table table-striped table-hover">
                                         <thead class="thead-dark">
                                         <tr>
@@ -66,40 +67,38 @@
                                         </tr>
                                         </thead>
 
-
                                         <tbody>
-
                                         <tr th:each="weekview, itemStat: ${form.weekviews}"
                                             th:style="${itemStat.odd} ? 'color: gray' : 'color: blue;'">
                                             <td><span
                                                     th:text="${weekview.employeeProject.project.name}">
 											Project</span></td>
                                             <td><span th:text="${weekview.task.name}"> Task</span></td>
-                                            <td><input class="col-lg"
+                                            <td><input class="form-control"
                                                        th:placeholder="Mon + ' ' + ${itemStat.count}"
                                                        th:name="|weekviews[${itemStat.index}].mon|"
                                                        th:value="${weekview.getMon()}"/></td>
-                                            <td><input class="col-lg"
+                                            <td><input class="form-control"
                                                        th:placeholder="Tus + ' ' + ${itemStat.count}"
                                                        th:name="|weekviews[${itemStat.index}].tus|"
                                                        th:value="${weekview.getTus()}"/></td>
-                                            <td><input class="col-lg"
+                                            <td><input class="form-control"
                                                        th:placeholder="Wed + ' ' + ${itemStat.count}"
                                                        th:name="|weekviews[${itemStat.index}].wed|"
                                                        th:value="${weekview.getWed()}"/></td>
-                                            <td><input class="col-lg"
+                                            <td><input class="form-control"
                                                        th:placeholder="Thu + ' ' + ${itemStat.count}"
                                                        th:name="|weekviews[${itemStat.index}].thu|"
                                                        th:value="${weekview.getThu()}"/></td>
-                                            <td><input class="col-lg"
+                                            <td><input class="form-control"
                                                        th:placeholder="Fri + ' ' + ${itemStat.count}"
                                                        th:name="|weekviews[${itemStat.index}].fri|"
                                                        th:value="${weekview.getFri()}"/></td>
-                                            <td><input class="col-lg"
+                                            <td><input class="form-control"
                                                        th:placeholder="Sat + ' ' + ${itemStat.count}"
                                                        th:name="|weekviews[${itemStat.index}].sat|"
                                                        th:value="${weekview.getSat()}"/></td>
-                                            <td><input class="col-lg"
+                                            <td><input class="form-control"
                                                        th:placeholder="Sun + ' ' + ${itemStat.count}"
                                                        th:name="|weekviews[${itemStat.index}].sun|"
                                                        th:value="${weekview.getSun()}"/></td>
@@ -150,21 +149,23 @@
                                         </tfoot>
 
                                     </table>
-                                </div>
-                                <!-- /.box-body -->
-                                <div class="box-footer clearfix">
-                                    <div class="pull-right">
-                                        <input type="submit" id="saveButton" name="action" th:value="Save"/>
-                                        <input type="reset" id="resetButton" name="action" th:value="Reset"/>
-                                        <input type="submit" id="submitButton" name="action"
-                                               th:value="SubmitForApproval"/>
+
+
+                                    <div class="box-footer clearfix">
+                                        <div class="pull-right">
+                                            <input type="submit" id="saveButton" name="action" th:value="Save"/>
+                                            <input type="reset" id="resetButton" name="action" th:value="Reset"/>
+                                            <input type="submit" id="submitButton" name="action"
+                                                   th:value="SubmitForApproval"/>
+                                        </div>
                                     </div>
 
                                 </div>
-                            </fieldset>
-                        </form>
-                    </div>
-                    <!-- /.box -->
+                                <!-- /.box-body -->
+                            </div>
+                            <!-- /.box -->
+                        </fieldset>
+                    </form>
                 </div>
             </div>
             <!-- /.box -->
