added h2 and postgresql

--- a/src/main/resources/templates/admin/editProject.html
+++ b/src/main/resources/templates/admin/editProject.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments/head :: head"/>
+<head th:replace="fragments/head :: head"/>
 <body class="hold-transition skin-black-light sidebar-mini">
 <div class="wrapper">
 
-    <div th:replace="/fragments/header :: header">&nbsp;</div>
+    <div th:replace="fragments/header :: header">&nbsp;</div>
 
-    <div th:replace="/fragments/navigationbar :: navigationbar">&nbsp;</div>
+    <div th:replace="fragments/navigationbar :: navigationbar">&nbsp;</div>
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
@@ -61,7 +61,7 @@
         </section>
     </div>
 
-    <div th:replace="/fragments/footer :: footer">&nbsp;</div>
+    <div th:replace="fragments/footer :: footer">&nbsp;</div>
 
 </div>
 <script src="/dist/js/invalidFields.js"></script>
