--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -79,15 +79,15 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <!-- The user image in the navbar-->
                             <img src="/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                            <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                            <span class="hidden-xs" th:text="${username}">User Name</span>
+                            <!-- hidden-xs hides the fragments on small devices so only the image appears. -->
+                            <span class="hidden-xs" th:text="${fragments}">User Name</span>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- The user image in the menu -->
                             <li class="user-header">
                                 <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
-                                <p th:text="${username}">
+                                <p th:text="${fragments}">
                                     Name
                                     <small>Last login : 25/08/2019 10:10 PM</small>
                                 </p>
