--- a/src/main/resources/templates/fragments/header_v1.html
+++ b/src/main/resources/templates/fragments/header_v1.html
@@ -37,7 +37,7 @@
 					<img class="img-thumbnail img-responsive" alt="memorynotfound logo"
 						width="10%" th:src="@{/img/sgx_logo.png}"> <a
 						class="navbar-brand col-sm-3 col-md-2 mr-0" data-toggle="collapse"
-						href="#collapseOne">Hello, <span th:text="${username}">User
+						href="#collapseOne">Hello, <span th:text="${fragments}">User
 							Name</span></a>
 
 					<ul class="navbar-nav">
