--- a/src/main/resources/templates/admin/createProject.html
+++ b/src/main/resources/templates/admin/createProject.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments/head :: head"/>
+<head th:replace="fragments/head :: head"/>
 <body class="hold-transition skin-black-light sidebar-mini">
 <div class="wrapper">
 
-    <div th:replace="/fragments/header :: header">&nbsp;</div>
+    <div th:replace="fragments/header :: header">&nbsp;</div>
 
-    <div th:replace="/fragments/navigationbar :: navigationbar">&nbsp;</div>
+    <div th:replace="fragments/navigationbar :: navigationbar">&nbsp;</div>
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
 
-        <div th:replace="/fragments/contentHeader :: contentHeader"/>
+        <div th:replace="fragments/contentHeader :: contentHeader"/>
 
         <!-- Main content -->
         <section class="content container-fluid">
@@ -48,7 +48,7 @@
             </div>
         </section>
     </div>
-    <div th:replace="/fragments/footer :: footer">&nbsp;</div>
+    <div th:replace="fragments/footer :: footer">&nbsp;</div>
 
 </div>
 
